# libabigail

./: .clang-format  .gitignore  AUTHORS  COMMIT-LOG-GUIDELINES  COMPILING  CONTRIBUTING  COPYING  ChangeLog  Dockerfile  Dockerfile.fedora  Makefile.am  Makefile.in  NEWS  README  README-DOCKER.md  VISIBILITY  abigail.m4  aclocal.m4  changelog  config.h.in  configure  configure.ac  default.abignore  gen-changelog.py  libabigail.pc.in  ltmain.sh  release-text-template.txt  update-copyright.sh
doc/: Makefile.am  Makefile.in  suppr-doc.txt
doc/api/: libabigail.doxy
doc/manuals/: Makefile  Makefile.am  abicompat.rst  abidiff.rst  abidw.rst  abilint.rst  abipkgdiff.rst  conf.py  fedabipkgdiff.rst  index.rst  kmidiff.rst  libabigail-concepts.rst  libabigail-overview.rst  libabigail-tools.rst  tools-use-libabigail.txt
doc/website/: libabigail-website.doxy  mainpage.txt
include/: Makefile.am  Makefile.in  abg-btf-reader.h  abg-comp-filter.h  abg-comparison.h  abg-config.h  abg-corpus.h  abg-ctf-reader.h  abg-cxx-compat.h  abg-diff-utils.h  abg-dwarf-reader.h  abg-elf-based-reader.h  abg-elf-reader-common.h  abg-elf-reader.h  abg-fe-iface.h  abg-fwd.h  abg-hash.h  abg-ini.h  abg-interned-str.h  abg-ir.h  abg-irfwd.h  abg-libxml-utils.h  abg-libzip-utils.h  abg-reader.h  abg-regex.h  abg-reporter.h  abg-sptr-utils.h  abg-suppression.h  abg-symtab-reader.h  abg-tools-utils.h  abg-traverse.h  abg-version.h.in  abg-viz-common.h  abg-viz-dot.h  abg-viz-svg.h  abg-workers.h  abg-writer.h
include/libabigail/: Makefile.am  abg-corpus.h  abg-ir.h  abg-libxml-utils.h  abg-viz-dot.h
python/: Dockerfile  Makefile.am  README.md  libabigail.cpp  libabigail.hpp  libabigail.yaml
src/: Makefile.am  Makefile.in  abg-btf-reader.cc  abg-comp-filter.cc  abg-comparison-priv.h  abg-comparison.cc  abg-config.cc  abg-config.h  abg-corpus-priv.h  abg-corpus.cc  abg-corpus.h  abg-ctf-reader.cc  abg-default-reporter.cc  abg-diff-utils.cc  abg-dwarf-reader.cc  abg-elf-based-reader.cc  abg-elf-helpers.cc  abg-elf-helpers.h  abg-elf-reader-common.cc  abg-elf-reader.cc  abg-fe-iface.cc  abg-hash.cc  abg-hash.h  abg-ini.cc  abg-internal.h  abg-ir-priv.h  abg-ir.cc  abg-ir.h  abg-leaf-reporter.cc  abg-libxml-utils.cc  abg-libxml-utils.h  abg-libzip-utils.cc  abg-reader.cc  abg-reader.h  abg-regex.cc  abg-reporter-priv.cc  abg-reporter-priv.h  abg-sptr-utils.cc  abg-suppression-priv.h  abg-suppression.cc  (+14 more)
tests/: .gitignore  Makefile.am  Makefile.in  mockfedabipkgdiff.in  print-diff-tree.cc  runtestcanonicalizetypes.sh.in  runtestdefaultsupprs.py.in  runtestdefaultsupprspy3.sh.in  runtestfedabipkgdiff.py.in  runtestfedabipkgdiffpy3.sh.in  swap-libs-audit.cc  test-abicompat.cc  test-abidiff-exit.cc  test-abidiff.cc  test-alt-dwarf-file.cc  test-annotate.cc  test-bidiff.cc  test-core-diff.cc  test-cxx-compat.cc  test-diff-dwarf-abixml.cc  test-diff-dwarf.cc  test-diff-filter.cc  test-diff-pkg.cc  test-diff-suppr.cc  test-diff2.cc  test-dot.cc  test-elf-helpers.cc  test-ini.cc  test-ir-walker.cc  test-kmi-whitelist.cc  test-lookup-syms.cc  test-read-btf.cc  test-read-common.cc  test-read-common.h  test-read-ctf.cc  test-read-dwarf.cc  test-read-write.cc  test-svg.cc  test-symtab-reader.cc  test-symtab.cc  (+9 more)
tests/data/: Makefile.am
tests/data/test-abicompat/: test0-fn-changed-app  test0-fn-changed-report-0.txt  test0-fn-changed-report-2.txt  test1-fn-removed-report-0.txt  test2-var-removed-report-0.txt  test3-fn-removed-report-0.txt  test5-fn-changed-report-0.txt  test5-fn-changed-report-1.txt  test6-var-changed-report-0.txt  test6-var-changed-report-1.txt  test7-fn-changed-report-0.txt  test7-fn-changed-report-1.txt  test7-fn-changed-report-2.txt  test8-fn-changed-report-0.txt  test9-fn-changed-report-0.txt
tests/data/test-abidiff/: test-PR18166-libtirpc.so.abi  test-PR18791-report0.txt  test-PR18791-v0.so.abi  test-PR18791-v1.so.abi  test-corpus0-v0.so.abi  test-corpus0-v1.so.abi  test-crc-report-0-1.txt  test-crc-report-1-0.txt  test-crc-report.txt  test-enum0-report.txt  test-enum1-report.txt  test-namespace-0.xml  test-namespace-1.xml  test-namespace-report.txt  test-qual-type0-report.txt  test-struct0-report.txt  test-struct1-report.txt  test-var0-report.txt
tests/data/test-abidiff-exit/: PR30048-test-2-report-1.txt  PR30048-test-2-v0.cc  PR30048-test-2-v1.cc  PR30048-test-report-0.txt  PR30048-test-v0.c  PR30048-test-v1.c  ld-2.28-21x.so.sources.txt  qualifier-typedef-array-report-1.txt  test-PR28316-report.txt  test-PR29144-report-2.txt  test-PR29144-report.txt  test-PR29144-v0.cc  test-PR29144-v1.cc  test-allow-type-array-v0--v1-report-1.txt  test-allow-type-array-v0--v2-report-1.txt  test-allow-type-array-v0--v2-report-2.txt  test-allow-type-array-v0--v3-report-1.txt  test-allow-type-array-v0.c  test-allow-type-array-v1.c  test-allow-type-array-v2.c  test-allow-type-array-v3.c  test-allow-type-region-suppr.txt  test-allow-type-region-v0--v1-report-1.txt  test-allow-type-region-v0--v2-report-1.txt  test-allow-type-region-v0--v2-report-2.txt  test-allow-type-region-v0--v3-report-1.txt  test-allow-type-region-v0--v3-report-2.txt  test-allow-type-region-v0--v4-report-1.txt  test-allow-type-region-v0--v5-report-1.txt  test-allow-type-region-v0--v5-report-2.txt  test-allow-type-region-v0.c  test-allow-type-region-v1.c  test-allow-type-region-v2.c  test-allow-type-region-v3.c  test-allow-type-region-v4.c  test-allow-type-region-v5.c  test-allow-type-suppr1.txt  test-allow-type-suppr2.txt  test-crc-report.txt  test-decl-enum-report.txt  (+33 more)
tests/data/test-alt-dwarf-file/: test0-report.txt
tests/data/test-annotate/: PR29443-missing-xx.o.annotated.abi  libtest23.so.abi  libtest24-drop-fns-2.so.abi  libtest24-drop-fns.so.abi  test-anonymous-members-0.o.abi  test0.abi  test1.abi  test10-pr18818-gcc.so.abi  test13-pr18894.so.abi  (+15 more)
tests/lib/: catch.cc  catch.hpp
tools/: .gitignore  Makefile.am  abg-tools-utils.cc  abg-tools-utils.h  abiar.cc  abicompat.cc  abidiff.cc  abidw.cc  abilint.cc  abipkgdiff.cc  abisym.cc  biar.cc  bidiff.cc  bidw.cc  bilint.cc  binilint.cc  bisym.cc  fedabipkgdiff  kmidiff.cc
(+623 files in other folders)
