headers =		\
abg-sptr-utils.h	\
abg-ir.h		\
abg-corpus.h		\
abg-reader.h		\
abg-dwarf-reader.h	\
abg-writer.h		\
abg-comparison.h	\
abg-comp-filter.h	\
abg-diff-utils.h	\
abg-libxml-utils.h	\
abg-libzip-utils.h	\
abg-fwd.h		\
abg-hash.h		\
abg-config.h		\
abg-traverse.h		\
abg-version.h		\
abg-viz-common.h	\
abg-viz-dot.h		\
abg-viz-svg.h		

publicheaders_DATA=$(headers)
publicheadersdir=$(includedir)/libabigail

EXTRA_DIST = abg-version.h.in
