pkginclude_HEADERS =	\
abg-sptr-utils.h	\
abg-interned-str.h	\
abg-ir.h		\
abg-corpus.h		\
abg-reader.h		\
abg-dwarf-reader.h	\
abg-writer.h		\
abg-comparison.h	\
abg-reporter.h		\
abg-suppression.h	\
abg-comp-filter.h	\
abg-diff-utils.h	\
abg-libxml-utils.h	\
abg-libzip-utils.h	\
abg-fwd.h		\
abg-hash.h		\
abg-tools-utils.h	\
abg-config.h		\
abg-ini.h		\
abg-workers.h		\
abg-traverse.h		\
abg-version.h		\
abg-viz-common.h	\
abg-viz-dot.h		\
abg-viz-svg.h		

EXTRA_DIST = abg-version.h.in
